# nix

./: .gitignore  CONTRIBUTING.md  Makefile  flake.nix  meson.build  package.nix
.github/: CODEOWNERS
doc/external-api/: doxygen.cfg.in  local.mk
doc/internal-api/: doxygen.cfg.in  local.mk
doc/manual/src/: SUMMARY.md.in  glossary.md
doc/manual/src/command-ref/: nix-instantiate.md
doc/manual/src/contributing/: testing.md
doc/manual/src/language/: derivations.md  import-from-derivation.md  string-interpolation.md
maintainers/: flake-module.nix  hydra.nix
src/libcmd/: command.cc
src/libexpr/: eval-cache.cc  eval.cc  primops.cc
src/libexpr/primops/: context.cc  fetchTree.cc
src/libflake/flake/: config.cc
src/libstore/: binary-cache-store.cc  legacy-ssh-store.cc  legacy-ssh-store.hh
src/libutil/: meson.build  package.nix
src/libutil/unix/: users.cc
src/nix/: derivation-add.md  derivation-show.md  main.cc  nix.md
src/nix/unix/: daemon.cc
subprojects/build-remote/: build-remote.cc
subprojects/libexpr/: local.mk
subprojects/libstore/: local.mk
subprojects/nix/: local.mk
tests/functional/: restricted.sh
